--- a/src/Rev2Data&Yelp.ipynb
+++ b/src/Rev2Data&Yelp.ipynb
@@ -983,7 +983,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1037,6 +1037,26 @@
    ],
    "source": [
     "otc_network_gt[otc_network_gt[\"Timestamp\"]==otc_network_gt[\"Timestamp\"].min()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2004-10-20 2015-01-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "Yelp_NYC = pd.read_csv('metadata_YelpNYC.txt',delimiter= '\\s+', index_col=False)\n",
+    "Yelp_NYC.columns = [\"user_id\", \"prod_id\", \"rating\", \"Label\",\"date\"]\n",
+    "Yelp_NYC\n",
+    "print(Yelp_NYC[\"date\"].min(), Yelp_NYC[\"date\"].max())"
    ]
   },
   {
@@ -1211,6 +1231,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1/2006 9/9/2012\n"
+     ]
+    }
+   ],
+   "source": [
+    "Yelp_Chi_hotel = pd.read_csv('output_meta_yelpHotelData_NRYRcleaned.txt',delimiter= '\\s+', index_col=False)\n",
+    "Yelp_Chi_hotel.columns = [\"date\", \"review_id\", \"reviewer_id\", \"product_id\",\"Label\",\"?\",\"?\",\"?\",\"star_rating\"]\n",
+    "print(Yelp_Chi_hotel[\"date\"].min(), Yelp_Chi_hotel[\"date\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": false
@@ -1354,6 +1393,27 @@
     "    if Yelp_Chi_hotel1.iat[i,1][0] == 'Y':\n",
     "        benign += 1\n",
     "benign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1/2006 9/9/2012\n"
+     ]
+    }
+   ],
+   "source": [
+    "Yelp_Chi_res = pd.read_csv('output_meta_yelpResData_NRYRcleaned.txt',delimiter= '\\s+', index_col=False)\n",
+    "Yelp_Chi_res.columns = [\"date\", \"review_id\", \"reviewer_id\", \"product_id\",\"Label\",\"?\",\"?\",\"?\",\"star_rating\"]\n",
+    "print(Yelp_Chi_res[\"date\"].min(), Yelp_Chi_res[\"date\"].max())"
    ]
   },
   {
@@ -1509,7 +1569,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://stackoverflow.com/questions/16729574/how-to-get-a-value-from-a-cell-of-a-dataframe"
+    "#https://stackoverflow.com/questions/16729574/how-to-get-a-value-from-a-cell-of-a-dataframe\n",
+    "Yelp_Zip = pd.read_csv('metadata_YelpZip.txt',delimiter= '\\s+', index_col=False)\n",
+    "Yelp_Zip.columns = [\"user_id\", \"prod_id\", \"rating\", \"Label\",\"date\"]\n",
+    "#Yelp_Zip\n",
+    "print(Yelp_Zip[\"date\"].min(), Yelp_Zip[\"date\"].max())"
    ]
   }
  ],
