--- a/src/Rev2DataTime.ipynb
+++ b/src/Rev2DataTime.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -42,6 +44,81 @@
     }
    ],
    "source": [
+    "print(data_nw_df[\"timestamp\"].min(), data_nw_df[\"timestamp\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_name = \"alpha\"\n",
+    "\n",
+    "data_nw_df = pd.read_csv(\"alpha_network.csv\", header=None, names=['src', 'dest', 'rating', 'timestamp'], parse_dates=[3], infer_datetime_format=True)\n",
+    "data_gt_df = pd.read_csv(\"alpha_gt.csv\", header=None, names=['id', 'label'])\n",
+    "\n",
+    "if data_name != \"epinions\":\n",
+    "    data_nw_df[\"timestamp\"] = data_nw_df[\"timestamp\"].astype(int).apply(datetime.fromtimestamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010-11-08 00:00:00 2016-01-22 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_nw_df[\"timestamp\"].min(), data_nw_df[\"timestamp\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2001/0 2002/05/30\n"
+     ]
+    }
+   ],
+   "source": [
+    "epdata_nw_df = pd.read_csv(\"epinions_network.csv\", header=None, names=['src', 'dest', 'rating', 'timestamp'], parse_dates=[3], infer_datetime_format=True)\n",
+    "print(epdata_nw_df[\"timestamp\"].min(), epdata_nw_df[\"timestamp\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1289241911.72836 1453684323.75728\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_name = \"otc\"\n",
+    "\n",
+    "data_nw_df = pd.read_csv(\"otc_network.csv\", header=None, names=['src', 'dest', 'rating', 'timestamp'], parse_dates=[3], infer_datetime_format=True)\n",
+    "\n",
     "print(data_nw_df[\"timestamp\"].min(), data_nw_df[\"timestamp\"].max())"
    ]
   },
@@ -151,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -181,13 +260,20 @@
     "ax = sns.histplot(data_dest_cnt, stat=\"probability\", bins=50, kde=False)\n",
     "ax.set_xlabel(\"#reviews to product by labeled user\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rl",
+   "display_name": "myenv",
    "language": "python",
-   "name": "rl"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
