--- a/src/eval_ilp_attack.ipynb
+++ b/src/eval_ilp_attack.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +106,6 @@
       "../res/ilp_attack/fraudar-amazon/200.0-0.0.pkl\n",
       "../res/ilp_attack/fraudar-amazon/300.0-0.0.pkl\n",
       "../res/ilp_attack/fraudar-amazon/400.0-0.0.pkl\n",
-      "../res/ilp_attack/rsd-amazon/100.0-0.0.pkl\n",
-      "../res/ilp_attack/rsd-amazon/200.0-0.0.pkl\n",
-      "../res/ilp_attack/rsd-amazon/300.0-0.0.pkl\n",
-      "../res/ilp_attack/rsd-amazon/400.0-0.0.pkl\n",
       "../res/ilp_attack/rev2-amazon/100.0-0.0.pkl\n",
       "../res/ilp_attack/rev2-amazon/200.0-0.0.pkl\n",
       "../res/ilp_attack/rev2-amazon/300.0-0.0.pkl\n",
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -223,65 +219,65 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">amazon</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">400.0</th>\n",
        "      <th rowspan=\"2\" valign=\"top\">0.6</th>\n",
        "      <th>recall</th>\n",
-       "      <td>0.154440</td>\n",
-       "      <td>0.156250</td>\n",
-       "      <td>0.160643</td>\n",
-       "      <td>0.163934</td>\n",
+       "      <td>0.165919</td>\n",
+       "      <td>0.234432</td>\n",
+       "      <td>0.304985</td>\n",
+       "      <td>0.360313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.248447</td>\n",
-       "      <td>0.250784</td>\n",
-       "      <td>0.258065</td>\n",
-       "      <td>0.262295</td>\n",
+       "      <td>0.256055</td>\n",
+       "      <td>0.320000</td>\n",
+       "      <td>0.355556</td>\n",
+       "      <td>0.384401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">0.8</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.634921</td>\n",
-       "      <td>0.634921</td>\n",
-       "      <td>0.655738</td>\n",
-       "      <td>0.655738</td>\n",
+       "      <td>0.560606</td>\n",
+       "      <td>0.503937</td>\n",
+       "      <td>0.426230</td>\n",
+       "      <td>0.411940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.130293</td>\n",
-       "      <td>0.131579</td>\n",
-       "      <td>0.134680</td>\n",
-       "      <td>0.136986</td>\n",
+       "      <td>0.136531</td>\n",
+       "      <td>0.199377</td>\n",
+       "      <td>0.267352</td>\n",
+       "      <td>0.320186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.216216</td>\n",
-       "      <td>0.217984</td>\n",
-       "      <td>0.223464</td>\n",
-       "      <td>0.226629</td>\n",
+       "      <td>0.219585</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.328594</td>\n",
+       "      <td>0.360313</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>354 rows × 4 columns</p>\n",
+       "<p>510 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          0         1         2         3\n",
-       "alpha fraudar 100.0 0.0 precision  0.357513  0.370968  0.380682  0.364198\n",
-       "                        recall     0.907895  0.851852  0.893333  0.855072\n",
-       "                        f1         0.513011  0.516854  0.533865  0.510823\n",
-       "                    0.2 precision  0.350785  0.370968  0.380682  0.335526\n",
-       "                        recall     0.761364  0.741935  0.770115  0.629630\n",
-       "...                                     ...       ...       ...       ...\n",
-       "otc   rev2    400.0 0.6 recall     0.154440  0.156250  0.160643  0.163934\n",
-       "                        f1         0.248447  0.250784  0.258065  0.262295\n",
-       "                    0.8 precision  0.634921  0.634921  0.655738  0.655738\n",
-       "                        recall     0.130293  0.131579  0.134680  0.136986\n",
-       "                        f1         0.216216  0.217984  0.223464  0.226629\n",
+       "                                           0         1         2         3\n",
+       "alpha  fraudar 100.0 0.0 precision  0.357513  0.370968  0.380682  0.364198\n",
+       "                         recall     0.907895  0.851852  0.893333  0.855072\n",
+       "                         f1         0.513011  0.516854  0.533865  0.510823\n",
+       "                     0.2 precision  0.350785  0.370968  0.380682  0.335526\n",
+       "                         recall     0.761364  0.741935  0.770115  0.629630\n",
+       "...                                      ...       ...       ...       ...\n",
+       "amazon rev2    400.0 0.6 recall     0.165919  0.234432  0.304985  0.360313\n",
+       "                         f1         0.256055  0.320000  0.355556  0.384401\n",
+       "                     0.8 precision  0.560606  0.503937  0.426230  0.411940\n",
+       "                         recall     0.136531  0.199377  0.267352  0.320186\n",
+       "                         f1         0.219585  0.285714  0.328594  0.360313\n",
        "\n",
-       "[354 rows x 4 columns]"
+       "[510 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -370,39 +366,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>baseline-0.0</th>\n",
-       "      <td>0.357787</td>\n",
-       "      <td>0.371480</td>\n",
-       "      <td>0.371480</td>\n",
-       "      <td>0.371480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.319834</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>0.278244</td>\n",
-       "      <td>0.256777</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.292191</td>\n",
-       "      <td>0.252018</td>\n",
-       "      <td>0.222460</td>\n",
-       "      <td>0.196242</td>\n",
+       "      <td>0.085290</td>\n",
+       "      <td>0.085685</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.215445</td>\n",
-       "      <td>0.185323</td>\n",
-       "      <td>0.158817</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.187600</td>\n",
-       "      <td>0.154846</td>\n",
-       "      <td>0.133385</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
+       "      <td>0.085197</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,20 +399,19 @@
       ],
       "text/plain": [
        "budget           100.0     200.0     300.0     400.0\n",
-       "baseline-0.0  0.357787  0.371480  0.371480  0.371480\n",
-       "baseline-0.2  0.319834  0.300000  0.278244  0.256777\n",
-       "baseline-0.4  0.292191  0.252018  0.222460  0.196242\n",
-       "baseline-0.6       NaN  0.215445  0.185323  0.158817\n",
-       "baseline-0.8       NaN  0.187600  0.154846  0.133385"
+       "baseline-0.2  0.085197  0.085197  0.085197  0.085197\n",
+       "baseline-0.4  0.085290  0.085685  0.085197  0.085197\n",
+       "baseline-0.6  0.085197  0.085197  0.085197  0.085197\n",
+       "baseline-0.8  0.085197  0.085197  0.085197  0.085197"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"rev2\", data=\"otc\", met=\"recall\")"
+    "get_alg_data_met(df_met, alg=\"fraudar\", data=\"amazon\", met=\"precision\")"
    ]
   }
  ],
