--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
     "    ret = {}\n",
     "    for sp in range(splits):\n",
     "        # df_res[\"truth\"] = df_res[\"truth\"].fillna(1)\n",
-    "#         df_res.loc[[u[:5]==\"usock\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
-    "#         df_res.loc[[u[:6]==\"udummy\" for u in df_res.index.tolist()], \"truth\"] = 0\n",
+    "        df_res.loc[[u[:5]==\"usock\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
+    "        df_res.loc[[u[:6]==\"udummy\" for u in df_res.index.tolist()], \"truth\"] = 1\n",
     "        df = df_res[[sp, \"truth\"]].dropna()\n",
     "        t = df[\"truth\"].sum() if K is None else K\n",
     "        t_frac = t / df.shape[0]\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,15 +101,7 @@
      "output_type": "stream",
      "text": [
       "../res/ilp_attack/rev2-otc/100.0-0.6.pkl\n",
-      "../res/ilp_attack/rev2-otc/100.0-0.8.pkl\n",
-      "../res/ilp_attack/fraudar-amazon/100.0-0.0.pkl\n",
-      "../res/ilp_attack/fraudar-amazon/200.0-0.0.pkl\n",
-      "../res/ilp_attack/fraudar-amazon/300.0-0.0.pkl\n",
-      "../res/ilp_attack/fraudar-amazon/400.0-0.0.pkl\n",
-      "../res/ilp_attack/rev2-amazon/100.0-0.0.pkl\n",
-      "../res/ilp_attack/rev2-amazon/200.0-0.0.pkl\n",
-      "../res/ilp_attack/rev2-amazon/300.0-0.0.pkl\n",
-      "../res/ilp_attack/rev2-amazon/400.0-0.0.pkl\n"
+      "../res/ilp_attack/rev2-otc/100.0-0.8.pkl\n"
      ]
     }
    ],
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +252,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>510 rows × 4 columns</p>\n",
+       "<p>534 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -277,7 +269,7 @@
        "                         recall     0.136531  0.199377  0.267352  0.320186\n",
        "                         f1         0.219585  0.285714  0.328594  0.360313\n",
        "\n",
-       "[510 rows x 4 columns]"
+       "[534 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -293,7 +285,6 @@
     "dict_met = {\n",
     "    (d, a, b, f): pd.DataFrame.from_dict(get_metrics(df_res=attack_res[(d, a, b, f)], splits=4, K=None, th=th_dict[a]))\n",
     "    for d, a, b, f in attack_res\n",
-    "#     for b in budget_list for f in frac_list\n",
     "}\n",
     "df_met = pd.concat(dict_met, keys=dict_met.keys())\n",
     "display(df_met)"
@@ -301,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -366,32 +357,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>baseline-0.0</th>\n",
+       "      <td>0.136290</td>\n",
+       "      <td>0.135441</td>\n",
+       "      <td>0.135441</td>\n",
+       "      <td>0.135441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>baseline-0.2</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
+       "      <td>0.133209</td>\n",
+       "      <td>0.131054</td>\n",
+       "      <td>0.128974</td>\n",
+       "      <td>0.126962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.4</th>\n",
-       "      <td>0.085290</td>\n",
-       "      <td>0.085685</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
+       "      <td>0.131175</td>\n",
+       "      <td>0.127749</td>\n",
+       "      <td>0.123135</td>\n",
+       "      <td>0.119545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.6</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
+       "      <td>0.128974</td>\n",
+       "      <td>0.123135</td>\n",
+       "      <td>0.117833</td>\n",
+       "      <td>0.112993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>baseline-0.8</th>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
-       "      <td>0.085197</td>\n",
+       "      <td>0.126962</td>\n",
+       "      <td>0.119545</td>\n",
+       "      <td>0.112993</td>\n",
+       "      <td>0.107155</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -399,19 +397,20 @@
       ],
       "text/plain": [
        "budget           100.0     200.0     300.0     400.0\n",
-       "baseline-0.2  0.085197  0.085197  0.085197  0.085197\n",
-       "baseline-0.4  0.085290  0.085685  0.085197  0.085197\n",
-       "baseline-0.6  0.085197  0.085197  0.085197  0.085197\n",
-       "baseline-0.8  0.085197  0.085197  0.085197  0.085197"
+       "baseline-0.0  0.136290  0.135441  0.135441  0.135441\n",
+       "baseline-0.2  0.133209  0.131054  0.128974  0.126962\n",
+       "baseline-0.4  0.131175  0.127749  0.123135  0.119545\n",
+       "baseline-0.6  0.128974  0.123135  0.117833  0.112993\n",
+       "baseline-0.8  0.126962  0.119545  0.112993  0.107155"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, alg=\"fraudar\", data=\"amazon\", met=\"precision\")"
+    "get_alg_data_met(df_met, alg=\"fraudar\", data=\"amazon\", met=\"f1\")"
    ]
   }
  ],
