add time horizon

--- a/src/eval_ilp.ipynb
+++ b/src/eval_ilp.ipynb
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# attack_res[(\"alpha\", \"rev2\", 400.0, 0.2)].to_csv(\"ar.csv\")"
+    "attack_res[(\"alpha\", \"fraudar\", 400.0, 0.0)].to_csv(\"ar.csv\")"
    ]
   },
   {
