--- a/src/eval_sockfarm.ipynb
+++ b/src/eval_sockfarm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,30 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../res/sockfarm_attack/fraudar-alpha/100.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-alpha/200.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-alpha/300.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-alpha/400.0.pkl\n",
-      "../res/sockfarm_attack/rsd-alpha/300.0.pkl\n",
-      "../res/sockfarm_attack/rsd-alpha/400.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-otc/100.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-otc/200.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-otc/300.0.pkl\n",
-      "../res/sockfarm_attack/fraudar-otc/400.0.pkl\n",
-      "../res/sockfarm_attack/rsd-otc/100.0.pkl\n",
-      "../res/sockfarm_attack/rsd-otc/200.0.pkl\n",
-      "../res/sockfarm_attack/rsd-otc/300.0.pkl\n",
-      "../res/sockfarm_attack/rsd-otc/400.0.pkl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "attack_res = {\n",
     "    (d, a, b): get_results(data_name=d, alg=a, attack_name=\"sockfarm_attack\", budget=b)\n",
@@ -127,7 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attack_res[(\"alpha\", \"rsd\", 400.0)].to_csv(\"ar.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -162,150 +150,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"12\" valign=\"top\">alpha</th>\n",
-       "      <th rowspan=\"12\" valign=\"top\">rev2</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">alpha</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">fraudar</th>\n",
        "      <th rowspan=\"3\" valign=\"top\">100.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.547368</td>\n",
-       "      <td>0.556338</td>\n",
-       "      <td>0.385027</td>\n",
-       "      <td>0.366667</td>\n",
+       "      <td>0.354167</td>\n",
+       "      <td>0.375661</td>\n",
+       "      <td>0.380682</td>\n",
+       "      <td>0.352201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.981366</td>\n",
-       "      <td>0.464516</td>\n",
-       "      <td>0.442953</td>\n",
+       "      <td>0.435897</td>\n",
+       "      <td>0.440994</td>\n",
+       "      <td>0.432258</td>\n",
+       "      <td>0.375839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1</th>\n",
-       "      <td>0.707483</td>\n",
-       "      <td>0.710112</td>\n",
-       "      <td>0.421053</td>\n",
-       "      <td>0.401216</td>\n",
+       "      <td>0.390805</td>\n",
+       "      <td>0.405714</td>\n",
+       "      <td>0.404834</td>\n",
+       "      <td>0.363636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">200.0</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">200.0</th>\n",
        "      <th>precision</th>\n",
-       "      <td>0.646575</td>\n",
-       "      <td>0.653846</td>\n",
-       "      <td>0.385027</td>\n",
-       "      <td>0.366667</td>\n",
+       "      <td>0.354167</td>\n",
+       "      <td>0.375661</td>\n",
+       "      <td>0.380682</td>\n",
+       "      <td>0.352201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.987552</td>\n",
-       "      <td>0.306383</td>\n",
-       "      <td>0.288210</td>\n",
+       "      <td>0.288136</td>\n",
+       "      <td>0.294606</td>\n",
+       "      <td>0.285106</td>\n",
+       "      <td>0.244541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>f1</th>\n",
-       "      <td>0.785358</td>\n",
-       "      <td>0.786777</td>\n",
-       "      <td>0.341232</td>\n",
-       "      <td>0.322738</td>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">300.0</th>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.710112</td>\n",
-       "      <td>0.382353</td>\n",
-       "      <td>0.385027</td>\n",
-       "      <td>0.366667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>recall</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.242991</td>\n",
-       "      <td>0.228571</td>\n",
-       "      <td>0.213592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f1</th>\n",
-       "      <td>0.830486</td>\n",
-       "      <td>0.297143</td>\n",
-       "      <td>0.286853</td>\n",
-       "      <td>0.269939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">400.0</th>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.754286</td>\n",
-       "      <td>0.382353</td>\n",
-       "      <td>0.387097</td>\n",
-       "      <td>0.366667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>recall</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.194514</td>\n",
-       "      <td>0.182278</td>\n",
-       "      <td>0.169666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f1</th>\n",
-       "      <td>0.859935</td>\n",
-       "      <td>0.257851</td>\n",
-       "      <td>0.247849</td>\n",
-       "      <td>0.231986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"12\" valign=\"top\">otc</th>\n",
-       "      <th rowspan=\"12\" valign=\"top\">rev2</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">100.0</th>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.469565</td>\n",
-       "      <td>0.483871</td>\n",
-       "      <td>0.521277</td>\n",
-       "      <td>0.513812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>recall</th>\n",
-       "      <td>0.553846</td>\n",
-       "      <td>0.546875</td>\n",
-       "      <td>0.529730</td>\n",
-       "      <td>0.516667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f1</th>\n",
-       "      <td>0.508235</td>\n",
-       "      <td>0.513447</td>\n",
-       "      <td>0.525469</td>\n",
-       "      <td>0.515235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">200.0</th>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.469565</td>\n",
-       "      <td>0.483871</td>\n",
-       "      <td>0.521277</td>\n",
-       "      <td>0.513812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>recall</th>\n",
-       "      <td>0.392727</td>\n",
-       "      <td>0.386029</td>\n",
-       "      <td>0.369811</td>\n",
-       "      <td>0.357692</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f1</th>\n",
-       "      <td>0.427723</td>\n",
-       "      <td>0.429448</td>\n",
-       "      <td>0.432671</td>\n",
-       "      <td>0.421769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">300.0</th>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.469565</td>\n",
-       "      <td>0.483871</td>\n",
-       "      <td>0.521277</td>\n",
-       "      <td>0.513812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">otc</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">rev2</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">300.0</th>\n",
        "      <th>recall</th>\n",
        "      <td>0.304225</td>\n",
        "      <td>0.298295</td>\n",
@@ -343,34 +239,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>72 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   0         1         2         3\n",
-       "alpha rev2 100.0 precision  0.547368  0.556338  0.385027  0.366667\n",
-       "                 recall     1.000000  0.981366  0.464516  0.442953\n",
-       "                 f1         0.707483  0.710112  0.421053  0.401216\n",
-       "           200.0 precision  0.646575  0.653846  0.385027  0.366667\n",
-       "                 recall     1.000000  0.987552  0.306383  0.288210\n",
-       "                 f1         0.785358  0.786777  0.341232  0.322738\n",
-       "           300.0 precision  0.710112  0.382353  0.385027  0.366667\n",
-       "                 recall     1.000000  0.242991  0.228571  0.213592\n",
-       "                 f1         0.830486  0.297143  0.286853  0.269939\n",
-       "           400.0 precision  0.754286  0.382353  0.387097  0.366667\n",
-       "                 recall     1.000000  0.194514  0.182278  0.169666\n",
-       "                 f1         0.859935  0.257851  0.247849  0.231986\n",
-       "otc   rev2 100.0 precision  0.469565  0.483871  0.521277  0.513812\n",
-       "                 recall     0.553846  0.546875  0.529730  0.516667\n",
-       "                 f1         0.508235  0.513447  0.525469  0.515235\n",
-       "           200.0 precision  0.469565  0.483871  0.521277  0.513812\n",
-       "                 recall     0.392727  0.386029  0.369811  0.357692\n",
-       "                 f1         0.427723  0.429448  0.432671  0.421769\n",
-       "           300.0 precision  0.469565  0.483871  0.521277  0.513812\n",
-       "                 recall     0.304225  0.298295  0.284058  0.273529\n",
-       "                 f1         0.369231  0.369069  0.367730  0.357006\n",
-       "           400.0 precision  0.469565  0.483871  0.521277  0.513812\n",
-       "                 recall     0.248276  0.243056  0.230588  0.221429\n",
-       "                 f1         0.324812  0.323575  0.319739  0.309484"
+       "                                      0         1         2         3\n",
+       "alpha fraudar 100.0 precision  0.354167  0.375661  0.380682  0.352201\n",
+       "                    recall     0.435897  0.440994  0.432258  0.375839\n",
+       "                    f1         0.390805  0.405714  0.404834  0.363636\n",
+       "              200.0 precision  0.354167  0.375661  0.380682  0.352201\n",
+       "                    recall     0.288136  0.294606  0.285106  0.244541\n",
+       "...                                 ...       ...       ...       ...\n",
+       "otc   rev2    300.0 recall     0.304225  0.298295  0.284058  0.273529\n",
+       "                    f1         0.369231  0.369069  0.367730  0.357006\n",
+       "              400.0 precision  0.469565  0.483871  0.521277  0.513812\n",
+       "                    recall     0.248276  0.243056  0.230588  0.221429\n",
+       "                    f1         0.324812  0.323575  0.319739  0.309484\n",
+       "\n",
+       "[72 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -380,7 +266,7 @@
    "source": [
     "th_dict = {\n",
     "    \"fraudar\": 0.5,\n",
-    "    \"rsd\": 1.2,\n",
+    "    \"rsd\": 0.6,\n",
     "    \"rev2\": 0.1,\n",
     "}\n",
     "dict_met = {\n",
@@ -394,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -439,28 +325,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>sockfarm-fraudar</th>\n",
+       "      <td>0.421247</td>\n",
+       "      <td>0.278097</td>\n",
+       "      <td>0.207575</td>\n",
+       "      <td>0.165588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>sockfarm-rev2</th>\n",
-       "      <td>0.559966</td>\n",
-       "      <td>0.559026</td>\n",
-       "      <td>0.421105</td>\n",
-       "      <td>0.399405</td>\n",
+       "      <td>0.722209</td>\n",
+       "      <td>0.645536</td>\n",
+       "      <td>0.421289</td>\n",
+       "      <td>0.386615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sockfarm-rsd</th>\n",
+       "      <td>0.109645</td>\n",
+       "      <td>0.072313</td>\n",
+       "      <td>0.053949</td>\n",
+       "      <td>0.043024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "budget            100.0     200.0     300.0     400.0\n",
-       "sockfarm-rev2  0.559966  0.559026  0.421105  0.399405"
+       "budget               100.0     200.0     300.0     400.0\n",
+       "sockfarm-fraudar  0.421247  0.278097  0.207575  0.165588\n",
+       "sockfarm-rev2     0.722209  0.645536  0.421289  0.386615\n",
+       "sockfarm-rsd      0.109645  0.072313  0.053949  0.043024"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_alg_data_met(df_met, data=\"alpha\", met=\"f1\")"
+    "get_alg_data_met(df_met, data=\"alpha\", met=\"recall\")"
    ]
   }
  ],
